# meewu

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
src/: main.rs  utils.rs
src/modules/: installer.rs  manifest.rs  mod.rs  paths.rs
