[package]
name = "meewu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.3"
dirs = "5.0"
walkdir = "2.0"
serde_json = "1.0"
chrono = "0.4.43"
libc = "0.2"
io = "0.0.2"
colored = "2.1"